fixed unwanted horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ nav {
   background-color: black;
   color: white;
   position: relative;
-  background-size: auto 100%;
+  background-size: auto 100vw;
   overflow: hidden;
 
 }
@@ -112,7 +112,7 @@ nav {
   font-size: 3em;
   text-align: center;
   background-position: center;
-  width: 100%;
+  width: 100vw;
   position: absolute;
   top: 50%;
   margin-top: -1em;
@@ -147,7 +147,6 @@ nav {
 }
 
 .main-container2 {
-  padding: 2em;
   margin: 0 auto;
   display:flex;
   flex-direction: row;
@@ -241,7 +240,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 350px;
+  max-width: 350px;
   background-color: white;
   padding: .3em;
   text-align: center;
@@ -286,13 +285,16 @@ nav {
 
   .container3{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
   .personal-info {
     align-items: center;
     align-self: center;
     margin-left: 2em;
+    margin-top: 1.5em;
   }
 
   .contact-info {
@@ -301,12 +303,21 @@ nav {
     justify-content: flex-start;
     align-items: center;
     font-size: 1.2em;
-    margin: .5em 0;
+    margin: .8em 0;
   }
 
   .contact-info img{
     height: 75px;
     width: 75px;
+    margin-right: 5px;
+  }
+  .contact-info a{
+    text-decoration: none;
+    color: black;
+
+  }
+  .contact-info a:hover{
+    cursor: pointer;
   }
 
 @media screen and (min-width: 770px) {
